1.) When a customer registers, they cannot put in a password. You can only put in a password in the admin panel. .. Done & Fixed 2.) When you login, you cannot logout. .. Done & Fixed 3.) The "YOUR CART $ XXX.XX" in red at the top does not update price.  .. Done & Fixed 4.) Search bar does not work … Done & Fixed 5.) I created item "Pepper Spray."  The picture does not show up on webshop frontpage (see attached picture). … Done & Fixed 6.) In admin panel under Customers tab - "Phone Number" is not the number I entered.  …. Done & Fixed 7.) Please see menu / page I created "Terms & Conditions" - I was trying to link a menu page to an existing Cherub Defense Blog page. It does not work. Is it possible for me to change Menu pages to be able to direct to any website? Or for it to recognize /blog/ directory and redirect accordingly? 8.) Please see order confirmation I forwarded - Order confirmations come from "elmerq@gator1287.hostgator.com" and say they're from "webshop.com" can we have this email come from a new email address: "orders@cherubdefense.com" and say they're from Cherub Defense? Also note, the phone number I put in is correct here (was wrong in #6). … Done & Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,12 @@ body {
     margin:0px; padding:0px;  
     /*    background-color:#f6f6f6;  */
     font-family: Arial;
-}  
+}
+
+a:link {text-decoration: none;}      /* unvisited link */
+a:visited {text-decoration: none;}  /* visited link */
+a:hover {text-decoration: none; color: #F9BB00;}  /* mouse over link */
+a:active {text-decoration: none;}  /* selected link */
 
 #main {  
     /*    background-color:#f6f6f6;  */
@@ -55,6 +60,12 @@ body {
     font-weight: bold;
     font-style: italic;
 }
+.my_account a:link, .my_account a:visited{
+    color: #fff;
+}
+.my_account a:hover{
+    color: #F9BB00;
+}
 #logo{
     float:left;
     background: #fff;
@@ -82,6 +93,13 @@ body {
 .total_price{
     color: red;
     font-style: italic;
+    font-weight: bold;
+}
+.price {
+    display: inline;
+    font-weight: bold;
+}
+.price_category{
     font-weight: bold;
 }
 .phone{
@@ -298,10 +316,10 @@ p.p_desc{
     border:1px solid #ffffff;
 }
 .product_desc{
+    margin-left: 10px;
     text-align:center;
     font-weight:normal;
     width:150px;
-    margin-left: 10px;
 }
 .button, .button:visited {
     background-color: #dddddd; -webkit-box-shadow:: 0 0 9px #333;
